tests/typing/errors/type_mismatch/test_smtlib.smt2
(set-logic UFLIA)
(declare-sort foo 0)
(declare-fun a () foo)
(declare-fun p (Int) Bool)
(assert (p a))
(check-sat)
