tests/typing/errors/type_mismatch/test_smtlib.expected
File "tests/typing/errors/type_mismatch/test_smtlib.smt2", line 5, character 8-13:
5 | (assert (p a))
            ^^^^^
Error The term: `a` has type `foo` but was expected to be of type `int`
